# tbwatcher-public

./: .gitignore  README.md  package-lock.json  package.json
docs/: BACKEND_API.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/fixtures/: inventory-sample.json  priceoverview-soulstone.json  search-soulstone.json
src-tauri/src/: lib.rs  main.rs  money.rs
src-tauri/src/backend/: mod.rs
src-tauri/src/catalog/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/entitlement/: mod.rs
src-tauri/src/gate/: mod.rs
src-tauri/src/history/: mod.rs
src-tauri/src/inventory/: mod.rs
src-tauri/src/market/: mod.rs
src-tauri/src/save/: item_map.gen.cjs  item_map.json  mapping.rs  mod.rs
src/lib/: Alerts.svelte  MainShell.svelte  MarketWatch.svelte  Movers.svelte  Portfolio.svelte  PriceChart.svelte  SellAdvisor.svelte  StashGrid.svelte  Upsell.svelte  config.ts  entitlement.ts  format.ts
src/routes/: +page.svelte
